--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <!-- Animations -->
     <link href="css/animate.css" rel="stylesheet" />
     <!-- Custom Favicon -->
-    <link href="img/Logo_JerePrograma_500mp.ico" rel="shortcut icon" type="image/x-icon" />
+    <link
+      href="img/Logo_JerePrograma_500mp.ico"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -365,12 +369,12 @@
           <div class="overlay-effect effects clearfix">
             <div class="img">
               <a
-                href="img/portfolio/portfolio-04-large.jpg"
+                href="img/portfolio/portfolio-04-large.png"
                 data-lightbox="roadtrip"
                 title="Project Four - Lorem Ipsum"
                 ><img
                   class="grayscale"
-                  src="img/portfolio/portfolio-04-thumbnail.jpg"
+                  src="img/portfolio/portfolio-04-thumbnail.png"
                   alt="Portfolio Item"
               /></a>
             </div>
